# lib/api-spec/openapi.yaml
@@ -81,11 +81,15 @@ components:
           type: string
           minLength: 1
           maxLength: 5000
+        recaptchaToken:
+          type: string
+          minLength: 1
       required:
         - name
         - phone
         - email
         - message
+        - recaptchaToken
     ContactResult:
       type: object
       properties:
